--- a/Test3/app/build.gradle
+++ b/Test3/app/build.gradle
@@ -28,5 +28,5 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:support-v13:26.0.0-alpha1'
-
+    compile 'com.google.android.exoplayer:exoplayer:r2.4.0'
 }
