--- a/Test3/app/src/main/AndroidManifest.xml
+++ b/Test3/app/src/main/AndroidManifest.xml
@@ -20,9 +20,15 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".Player"
+        <activity android:name=".Playerlist"
             android:label="@string/app_name"
             android:parentActivityName=".CameraActivity"
+            android:theme="@style/Theme.AppCompat.Light">
+        </activity>
+
+        <activity android:name=".Player"
+            android:label="@string/app_name"
+            android:parentActivityName=".Playerlist"
             android:theme="@style/PlayerTheme"
             android:configChanges="keyboard|keyboardHidden|orientation|screenSize|screenLayout|smallestScreenSize|uiMode">
         </activity>
