--- a/Test3/app/src/main/AndroidManifest.xml
+++ b/Test3/app/src/main/AndroidManifest.xml
@@ -26,6 +26,12 @@
             android:theme="@style/Theme.AppCompat.Light">
         </activity>
 
+        <activity android:name=".Recorder"
+            android:label="@string/app_name"
+            android:parentActivityName=".CameraActivity"
+            android:theme="@style/Theme.AppCompat.Light">
+        </activity>
+
         <activity android:name=".Player"
             android:label="@string/app_name"
             android:parentActivityName=".Playerlist"
