both recording and living can upload successfully

--- a/Test3/app/build.gradle
+++ b/Test3/app/build.gradle
@@ -32,5 +32,5 @@ dependencies {
     compile 'com.google.android.exoplayer:exoplayer:r2.4.0'
     compile 'com.writingminds:FFmpegAndroid:0.3.2'
     compile 'com.loopj.android:android-async-http:1.4.9'
-
+    compile 'com.google.code.gson:gson:2.8.2'
 }
