--- a/Test3/app/src/main/AndroidManifest.xml
+++ b/Test3/app/src/main/AndroidManifest.xml
@@ -44,6 +44,13 @@
             android:configChanges="keyboard|keyboardHidden|orientation|screenSize|screenLayout|smallestScreenSize|uiMode">
         </activity>
 
+        <activity android:name=".HlsPlayer"
+            android:label="@string/app_name"
+            android:parentActivityName=".Playerlist"
+            android:theme="@style/PlayerTheme"
+            android:configChanges="keyboard|keyboardHidden|orientation|screenSize|screenLayout|smallestScreenSize|uiMode">
+        </activity>
+
         <activity android:name=".Uploadlist"
             android:label="@string/app_name"
             android:parentActivityName=".Recorder"
